Fix tests header back link alignment #457

--- a/src/app/events/components/tests-header/tests-header.component.scss
+++ b/src/app/events/components/tests-header/tests-header.component.scss
@@ -17,5 +17,6 @@
 @media (max-width: 750px) {
   .header {
     padding-right: $spacer;
+    padding-left: $spacer / 2;
   }
 }
